...

/// The translations for English-us (`en`).
class TranslationsEn extends Translations {
  TranslationsEn([super.locale = 'en']);

  @override
  String get users => 'Users';

  @override
  String get chats => 'Chats';

  @override
  String get groups => 'Groups';
...
  String get viewProfile => 'View Profile';

  @override
  String get sendMessageInPrivate => 'Send message privately';

  @override
  String get delete => 'Delete';

  @override
  String get deleteConfirm =>
      'Would you like to delete this conversation? This conversation will be deleted from all of your devices';

  @override
...
  String get imageLibrary => 'Image Library';

  @override
  String get videoLibrary => 'Video Library';

  @override
  String get message => 'Message';

  @override
  String get noMessagesHereYet => 'No Messages here yet';

  @override
  String get selectReaction => 'Select Reaction';
...
  String get ownerShipTransfer => 'Ownership Transfer';

  @override
  String get errorDeleteUser => 'Error, Unable to delete user';

  @override
  String get userInfo => 'User Info';
  @override
  String get voice => 'Voice';
  @override
  String get deleteTheChat => 'Delete Chat';
  @override
  String get block => 'Block';
  @override
  String get unBlock => 'Unblock';

  @override
  String get enterTheGroupName => 'Enter the group name';
  @override
...
