...
                  Icons.add_box_outlined,
                  color: _colorPalette.iconSecondary,
                  size: 22,
                ),
              ),
              Text(
                'Create conversation',
                style: TextStyle(
                  fontSize: 14,
                  fontWeight: FontWeight.w400,
                  color: _colorPalette.textPrimary,
                ),
              ),
...
